# helion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pyre_configuration  AGENTS.md  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  CREATE_PR.md  Dockerfile  GOVERNANCE.md  HANDOFF_scaled_mm_vllm.md  IMPLEMENTATION_SUMMARY.md  KRAKEN_HELION_ANALYSIS_DEDUPLICATED.md  MATMUL_FIX_SUMMARY.md  PR1_FORILOOP_DOUBLE_BUFFER_DESIGN.md  PR_DESCRIPTION.md  QUICKSTART_B200.md  README.md  STANDALONE_GDPA.md  TESTING_B200.md  TILE_CONTEXT_ANALYSIS.md  TILE_CONTEXT_SOLUTION.md  addmm.py  analysis_jsd_misaligned.md  attention_kernels_by_model.md  autotuning_comparison.py  b200_results.py  bench_sensitivity.py  bench_sensitivity2.py  bench_short_kernels.py  benchmark_subprocess_gpu.py  capture_autotune_generations.py  compare_isolation_effect.py  concat_kernel_analysis.md  config_space.md  config_space_qa.md  conftest.py  corrected_enhanced_kernels.py  crossentropy.py  (+113 more)
.github/: matrix.json  merge_rules.yaml  pytorch-probot.yml
benchmark/: run.py
benchmarks/: README.md  autotune_metrics.py  bench_all_metal.py  bench_modal_matmul.py  benchmark_attention_pallas.py  benchmark_kernel_csv_combiner.py  blackwell-attn-measure.sh  blackwell-attn-parse.py  blackwell-attn-plot.py  blackwell-attn-setup-env.sh  cutedsl_benchmark.py  grouped_gemm.py  metal_attention_bench.py  metal_matmul_bench.py  metal_rmsnorm_bench.py  metal_softmax_bench.py  mpp_reduce_rows_repro.metal  mpp_reduction_prototype.py  run.py  run_distributed.py  run_input_shard.sh  run_linattn.py  run_tpu.py  scaled_mm_vllm_benchmark.py  scaled_mm_vllm_benchmark_README.md  scaled_mm_vllm_shapes.py
docs/: GenerateExamples.py  Makefile  aot_autotuning.md  attention_vs_blackwell.md  blackwell_subtiling.md  conf.py  cute_dsl_attention_plan.md  cute_dsl_gap_analysis.md  decoding_attention_kernel_comparison.md  deployment_autotuning.md  distributed_autotuning_benchmark_fn.md  distributed_autotuning_design.md  distributed_autotuning_timeout_analysis.md  examples.rst  generate_examples.py  helion_cutedsl_transpiler_architecture.md  helion_puzzles.rst  helion_tutorials.md  helion_tutorials.rst  index.md  installation.md  layer_norm_reduction_analysis.md  metal_backend.md  pallas_tpu_support.md  requirements.txt  tileir_backend.md  tpu-pallas-architecture-guide.md  triton_vs_cutedsl_and_helion_approach.md
examples/: README.rst  add.py  addmm.py  (+120 more)
helion/_native/: .gitignore  Cargo.toml  README.md  __init__.py
helion/_native/src/: lib.rs
scripts/helion_rag/: README.md  pyproject.toml  setup-helion-rag.sh
scripts/helion_rag/helion_rag/: __init__.py  __main__.py  _util.py  cli.py  config.py  corpus.py  hardware.py  index.py  ingest.py  lookup.py  manifest.py  models.py  patch.py  setup_helpers.py  upload.py
scripts/helion_rag/tests/: _fixtures.py  test_corpus_ingest_upload.py  test_index_generation.py  test_integration.py  test_lookup.py  test_lookup_patch.py  test_manifest_hardware.py  test_util.py  test_workload_key.py
(+1224 files in other folders)
